# particle-system

./: 2  CMakeLists.txt  README.md
.github/workflows/: main.yml
Shaders/: Particles.frag  Particles.vert
Source/: CMakeLists.txt  Main.cpp  ParticleSystem.cpp  ParticleSystem.h  Sandbox.cpp  Sandbox.h  Util.cpp  Util.h
